# Urban-Construction-Eagle-Eye

./: .gitmodules  README.md
MVS_ROS2/: image_publisher_test.sh  start_image_publisher.sh  test_image_compression.sh  test_rknn_inference.sh  test_unet_inference.sh
MVS_ROS2/src/HIKROBOT-MVS-CAMERA-ROS/: CMakeLists.txt  package.xml
MVS_ROS2/src/HIKROBOT-MVS-CAMERA-ROS/config/: camera.yaml  image_compression_params.yaml  image_inference_params.yaml  rknn_inference_params.yaml  unet_inference_params.yaml
MVS_ROS2/src/HIKROBOT-MVS-CAMERA-ROS/include/: hikrobot_camera.hpp
MVS_ROS2/src/HIKROBOT-MVS-CAMERA-ROS/launch/: hikrobot_camera_launch.py  hikrobot_camera_rviz_launch.py  image_compression.launch.py  image_inference.launch.py  rknn_inference.launch.py  unet_inference.launch.py
MVS_ROS2/src/HIKROBOT-MVS-CAMERA-ROS/src/: hikrobot_camera.cpp  image_compression_node.cpp  image_inference_node_opencv.cpp  image_inference_node_rknn.cpp
QianTrain/: ASPP.py  README.md  dataset_new.py  export_onnx.py  inference_onnx.py  loss_new.py  model.py  predict_new.py  summary.py  train_new.py
QianTrain/rknn_inference/: model_config.yml
cloud/: .gitignore  GaoDe3DMap.md  GaoDe3dTile.md  GaoDeAPILoad.md  GaoDeMouseEvent.md  README.md  USAGE.md  config.env.example  llm_client.py  main.py  map.py  need.md  pcd_cal.py  requirements.txt  run.py  setup_directories.py  showPCD.py  start.bat  test_environment.py  test_map.html  test_session_data.html  test_ssh.py  test_startup.py
cloud/old/: README.md  map.html  pcd_cal.py  view_pcd.html
cloud/old2/: .env.example  AMAP_GUIDE.md  DEPLOYMENT_SUMMARY.md  FILESYSTEM_DEPLOYMENT.md  FILESYSTEM_SUMMARY.md  INSTALL.md  QUICK_DEPLOY.md  UBUNTU_DEPLOYMENT.md  amap_client.py  baidu_map_client.py  data_manager.py  deploy_ubuntu.sh  error_handler.py  filesystem_data_processor.py  gemini_client.py  main.py  main_complete.py  main_filesystem.py  main_stable.py  main_ubuntu.py  pointcloud_analyzer.py  requirements.txt  requirements_ubuntu.txt  rosbag_processor.py  ssh_client.py  start.bat  start_ubuntu.sh  test_filesystem_flow.py  ubuntu_rosbag_processor.py
cloud/old2/templates/: index.html
cloud/services/: data_manager.py  gemini_client_new.py  pcd_processor.py  ssh_client.py
cloud/static/css/: components.css  review.css  style.css
cloud/static/js/: analysis.js  main.js  map_functions.js  pointcloud.js  review.js  statistics.js
cloud/templates/: 3d_map_demo.html  index.html  review.html
cloud/utils/: image_utils.py
fast_livo2_ws/src/fast_livo2/config/: avia.yaml  camera_pinhole.yaml
fast_livo2_ws/src/fast_livo2/launch/: mapping_avia_marslvig.launch
fast_livo2_ws/src/fast_livo2/src/: LIVMapper.cpp
fast_livo2_ws/src/livox_converter/: CMakeLists.txt  package.xml
fast_livo2_ws/src/livox_converter/src/: livox_msg_converter.cpp
fast_livo2_ws/src/sophus/: CMakeLists.txt  package.xml
livox_ros_driver2/livox_temp/src/livox_ros_driver2/launch_ROS2/: msg_MID360_launch.py
livox_ros_driver2/livox_temp/src/livox_ros_driver2/src/: lddc.cpp  lddc.h
user/: begin_camera.sh  begin_compress.sh  begin_convert.sh  begin_livox.sh  begin_mapping.sh  begin_rknn.sh  record.sh  rviz_begin.sh  start_slam.sh
