<?xml version="1.0"?>
<package format="3">
  <name>hikrobot_camera</name>
  <version>0.1.0</version>
  <description>Hikrobot camera driver with Basler Pylon support for ROS 2</description>
  <maintainer email="shamanqing@outlook.com">heqing</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>opencv2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>